<resources>
    <string name="app_name">EazyWalls</string>
    <string name="client_id">985733602365-9031t840pe8vifjsdclq11dsje8lq5bt.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">category</string>
    <string name="search">Search</string>
    <string name="setting">setting</string>
    <string name="opendrawer">openDrawer</string>
    <string name="closedrawer">closeDrawer</string>
    <string name="home_featured_layout_heading">Featured(❁´◡`❁)</string>
    <string name="trending">Trending</string>
    <string name="fire_icon">fire_icon</string>
    <string name="main_landing_view">main landing view</string>
    <string name="sub_images">sub images</string>
    <string name="collections">Collections</string>
    <string name="apply">Apply</string>
    <string name="backbtn">backbtn</string>
    <string name="filter_icon">filter_icon</string>
    <string name="_1270_listed_wallpapers_from_abstract_colletion">1270 listed wallpapers from abstract colletion.</string>
    <string name="Setting">Setting</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="reload_icon">reload_icon</string>
    <string name="try_reloading">Try reloading</string>
    <string name="emptyprofile">emptyProfile</string>
    <string name="socialicon">socialIcon</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="login">Login</string>
    <string name="or_continue_with_social_account">Or Continue With Social Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="create_an_account_to_continue">create an account to continue</string>
    <string name="getting_started">Getting started</string>
</resources>