<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.auth.SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!--            title bar-->
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:elevation="4dp">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="4dp"
                    >
                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/back_square"
                        android:layout_gravity="start"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/backbtn"/>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>
<!--           header title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/dp_20">
                <TextView
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/getting_started"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_28" />
                <TextView
                    android:id="@+id/wallpaperCount_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account_to_continue"
                    android:textColor="@color/lightGreyText"
                    android:layout_marginVertical="5dp"
                    android:layout_marginTop="@dimen/dp_15"
                    />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"/>
<!--            input fields-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/dp_20">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_65"
                        android:background="@drawable/input_field_background"
                        style="@style/credInputStyle"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:layout_marginBottom="20dp"
                        tools:ignore="Autofill" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/input_field_background"
                    android:hint="@string/password"
                    android:inputType="text"
                    style="@style/credInputStyle"
                    android:layout_marginBottom="20dp"
                    tools:ignore="Autofill" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/input_field_background"
                    android:hint="@string/confirm_password"
                    android:inputType="text"
                    style="@style/credInputStyle"
                    android:layout_marginBottom="20dp"
                    tools:ignore="Autofill" />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/login_btn_background"
                    android:text="@string/register"
                    android:textColor="@color/allWhite"
                    android:textSize="@dimen/sp_15"
                    android:textAllCaps="false"
                    android:paddingHorizontal="@dimen/dp_10" />



            </LinearLayout>
            <!--            social login buttons-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_continue_with_social_account"
                android:textColor="@color/lightGreyText"
                android:textAlignment="center"
                android:layout_marginVertical="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/facebook_login_background"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:clickable="true"

                    >
                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/facebook_icon"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:contentDescription="@string/socialicon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:textColor="@color/allWhite"
                        android:textSize="@dimen/sp_16"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/input_filed_grey_outline"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_10"
                    android:gravity="center"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/google_icon"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:contentDescription="@string/socialicon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/dp_20">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"/>
                <TextView
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginStart="@dimen/dp_5"
                    android:textColor="@color/fb_login_background"/>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>