<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CategoryActivity"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:elevation="4dp">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="4dp"
                    >
                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/back_square"
                        android:layout_gravity="start"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/backbtn"/>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/dp_15"
                        app:cardCornerRadius="8dp"
                        >
                        <ImageView
                            android:layout_width="@dimen/dp_30"
                            android:layout_height="@dimen/dp_30"
                            android:src="@drawable/filter_icon"
                            android:background="#BCB8B8"
                            android:padding="5dp"
                            android:contentDescription="@string/filter_icon"
                            />
                    </androidx.cardview.widget.CardView>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp_15"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/category_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/collections"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_28" />
                <TextView
                    android:id="@+id/wallpaperCount_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/_1270_listed_wallpapers_from_abstract_colletion"
                    android:textColor="@color/lightGreyText"
                    android:layout_marginVertical="5dp"
                    />

            </LinearLayout>
            <RelativeLayout
                android:id="@+id/reloadView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                >

                <ImageView
                    android:id="@+id/reloadIcon"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:src="@drawable/reload_icon"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/reload_icon"/>
                <TextView
                    android:layout_below="@+id/reloadIcon"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/try_reloading"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <include layout="@layout/wallpaper_shimmer_card"/>
                    <include layout="@layout/wallpaper_shimmer_card"/>
                    <include layout="@layout/wallpaper_shimmer_card"/>
                    <include layout="@layout/wallpaper_shimmer_card"/>
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>