<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CategoryFragment"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_15"
    android:layout_marginTop="@dimen/dp_4">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/collections"
              android:textStyle="bold"
              android:textColor="@color/black"
              android:textSize="@dimen/sp_28"/>
          <RelativeLayout
              android:id="@+id/reloadView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="gone"
              >

              <ImageView
                  android:id="@+id/reloadIcon"
                  android:layout_width="@dimen/dp_50"
                  android:layout_height="@dimen/dp_50"
                  android:src="@drawable/reload_icon"
                  android:layout_centerInParent="true"
                  android:contentDescription="@string/reload_icon"/>
              <TextView
                  android:layout_below="@+id/reloadIcon"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="@string/try_reloading"
                  android:textColor="@color/black"
                  android:textSize="@dimen/sp_16"
                  android:textStyle="bold"
                  android:layout_marginTop="@dimen/dp_10"
                  android:layout_centerHorizontal="true"/>

          </RelativeLayout>
          <com.facebook.shimmer.ShimmerFrameLayout
              android:id="@+id/shimmerLayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:visibility="visible">
              <include layout="@layout/category_shimmer_card" />
          </com.facebook.shimmer.ShimmerFrameLayout>
          <androidx.recyclerview.widget.RecyclerView
              android:layout_marginTop="@dimen/dp_5"
              android:id="@+id/recyclerView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="gone"/>

      </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</LinearLayout>