<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.auth.LoginActivity">


    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--            title bar-->
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:elevation="4dp">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="4dp"
                    >
                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/back_square"
                        android:layout_gravity="start"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/backbtn"/>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>
            <!--           header title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/dp_20">
                <TextView
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Let's Sign You In"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_28" />
                <TextView
                    android:id="@+id/wallpaperCount_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Welcome back, You've been missed"
                    android:textColor="@color/lightGreyText"
                    android:layout_marginVertical="5dp"
                    android:layout_marginTop="@dimen/dp_15"
                    />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"/>
            <!--            input fields-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/dp_20">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/input_field_background"
                    style="@style/credInputStyle"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="20dp"
                    tools:ignore="Autofill" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/input_field_background"
                    android:hint="@string/password"
                    android:inputType="text"
                    style="@style/credInputStyle"
                    tools:ignore="Autofill" />
                <TextView
                    android:id="@+id/forgetPassword_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Forgot Your Password ?"
                    android:textColor="@color/fb_login_background"
                    android:textAlignment="textEnd"
                    android:layout_marginVertical="20dp"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/loginBtn"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_65"
                            android:background="@drawable/login_btn_background"
                            android:text="@string/login"
                            android:textColor="@color/allWhite"
                            android:textSize="@dimen/sp_15"
                            android:textAllCaps="false"
                            android:paddingHorizontal="@dimen/dp_10"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />
                        <ProgressBar
                            android:id="@+id/progressbar"
                            android:layout_width="@dimen/dp_40"
                            android:layout_height="@dimen/dp_40"
                            android:elevation="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:indeterminateTint="@color/allWhite"
                            app:layout_constraintTop_toTopOf="parent"
                            android:visibility="gone"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>





            </LinearLayout>
            <!--            social login buttons-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_continue_with_social_account"
                android:textColor="@color/lightGreyText"
                android:textAlignment="center"
                android:layout_marginVertical="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="DisableBaselineAlignment"
                android:layout_marginHorizontal="20dp">
                <LinearLayout
                    android:id="@+id/facebook_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/facebook_login_background"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:clickable="true"
                    android:layout_marginBottom="15dp"

                    >
                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/facebook_icon"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:contentDescription="@string/socialicon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:textColor="@color/allWhite"
                        android:textSize="@dimen/sp_16"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/google_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_65"
                    android:background="@drawable/input_filed_grey_outline"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/google_icon"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:contentDescription="@string/socialicon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/dp_20">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't Have an Account ?"/>
                <TextView
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SignUp"
                    android:layout_marginStart="@dimen/dp_5"
                    android:textColor="@color/fb_login_background"/>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>